test/expected/explain_hb.out
explain short bool x
        ^
9: error: "short bool" is illegal for built-in type
